2013-07-23  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.builder.php: Fix layout
	of alerts editor for bug 2273 

2013-07-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Few improvements
	of monitor item and top n item on the reports for
	bug #2331

	* godmode/users/user_list.php: Change the default 
	order of the user list to user id, and hide the
	useless first and second name from the view
	(this data is not editable)

2013-07-22  Ramon Novoa  <rnovoa@artica.es>

	* include/help/es/help_field_match_snmp.php,
	  include/help/ja/help_field_match_snmp.php,
	  include/help/en/help_field_match_snmp.php: Updated.

2013-07-19  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/module_manager_editor_network.php,
	  include/javascript/pandora_snmp_browser.js,
	  include/functions_snmp_browser.php,
	  operation/snmpconsole/snmp_browser.php: Added SNMP version support to
	  the SNMP browser.

2013-07-22 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_graph.php, include/functions_reports.php,
	include/functions_groups.php, include/functions_incidents.php: fixed
	the source code style.
	
	* include/javascript/d3.v3.js: uploaded custom d3 version from
	https://github.com/mdtrooper/d3 . We need to pull request to
	the main branch...I love git.

2013-07-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php
	include/functions_treeview.php: Fixed bad link on
	agent info of the right side in treeview on metaconsole.
	And added access to node check to this link.
	For bug #2312

2013-07-22  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/stat_win.php: Change the order of jquery
	include file to avoid errors

2013-07-22  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/flot/pandora.flot.js: Fixed access to 
	events from graphics in metaconsole for bug #2335

2013-07-22  Sergio Martin <sergio.martin@artica.es>

	* include/help/en/help_module_interval_factor.php